--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "start-dev": "nodemon src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start": "node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
@@ -14,11 +15,12 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "nodemon": "^3.1.1"
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.9",
-    "nanoid": "^3.3.7",
-    "nodemon": "^3.1.1"
+    "hapi": "^18.1.0",
+    "nanoid": "^3.3.7"
   }
 }
